[metadata]
name = safety
version = file: safety/VERSION
description = Checks installed dependencies for known vulnerabilities and licenses.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = pyup.io
author_email = support@pyup.io
url = https://github.com/pyupio/safety
project_urls =
    Bug Tracker = https://github.com/pyupio/safety/issues
    Source = https://github.com/pyupio/safety/
    Documentation = https://docs.pyup.io/docs/getting-started-with-safety-cli
keywords = safety, vulnerabilities, dependencies, licenses, check
license = MIT license
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = safety, safety.formatters,safety.formatters.schemas, safety.alerts
package_dir =
    safety = safety
install_requires =
    setuptools>=65.5.1; python_version>="3.7"
    setuptools; python_version=="3.6"
    Click>=8.0.2
    urllib3>=1.26.5
    requests
    packaging>=21.0,<=23.0
    dparse>=0.6.2
    ruamel.yaml>=0.17.21
    dataclasses==0.8; python_version=="3.6"
    jinja2; python_version=="3.6"
    jinja2>=3.1.0; python_version>="3.7"
    marshmallow; python_version=="3.6"
    marshmallow>=3.15.0; python_version>="3.7"

[options.entry_points]
console_scripts =
    safety = safety.cli:cli

python_requires = >=3.6

[options.extras_require]
github = pygithub>=1.43.3
gitlab = python-gitlab>=1.3.0
spdx = spdx-tools>=0.7.1

[flake8]
exclude = docs
