[metadata]
name = safety
version = file: safety/VERSION
description = Checks installed dependencies for known vulnerabilities and licenses.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = safetycli.com
author_email = support@safetycli.com
url = https://github.com/pyupio/safety
project_urls =
    Bug Tracker = https://github.com/pyupio/safety/issues
    Source = https://github.com/pyupio/safety/
    Documentation = https://docs.pyup.io/docs/getting-started-with-safety-cli
keywords = safety, vulnerabilities, dependencies, licenses, check
license = MIT license
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = safety, safety.formatters,safety.formatters.schemas, safety.alerts, safety.auth, safety.scan, safety.scan.finder, safety.scan.ecosystems, safety.scan.ecosystems.python, safety.alerts.templates, safety.templates
python_requires = >=3.7
package_dir =
    safety = safety
install_requires =
    setuptools>=65.5.1
    Click>=8.0.2
    urllib3>=1.26.5
    requests
    packaging>=21.0
    dparse>=0.6.4
    ruamel.yaml>=0.17.21
    jinja2>=3.1.0
    marshmallow>=3.15.0
    Authlib>=1.2.0
    rich
    typer
    pydantic>=1.10.12
    safety_schemas==0.0.10
    typing-extensions>=4.7.1
    filelock~=3.12.2
    psutil~=6.0.0

[options.entry_points]
console_scripts =
    safety = safety.cli:cli

[options.extras_require]
github = pygithub>=1.43.3
gitlab = python-gitlab>=1.3.0
spdx = spdx-tools>=0.8.2

[flake8]
exclude = docs
